--- a/web/administrator_panel.xhtml
+++ b/web/administrator_panel.xhtml
@@ -18,7 +18,7 @@
         <!-- Users list -->
         <hr></hr>
         <h:dataTable
-            var="users" 
+            var="user" 
             summary="Table of users"
             value="#{administratorManager.allAdministrators}"
             rules="all"
@@ -28,7 +28,7 @@
                     <h:outputText value="Username" />
                 </f:facet>
                 <h:form>
-                    <h:outputText value="#{administratorManager.currentAdministratorM}" />
+                    <h:outputText value="#{user.name}" />
                 </h:form>
             </h:column>
 
@@ -50,14 +50,6 @@
                 </h:form>
             </h:column>
 
-            <h:column>
-                <f:facet name="header">
-                    <h:outputText value="Role" />
-                </f:facet>
-                <h:form>  
-                    <h:outputText value="#{user.role}" />    
-                </h:form>
-            </h:column>
 
             <h:column>
                 <f:facet name="header">
@@ -90,7 +82,7 @@
                 <h:form>
 
                     <h:commandLink id="user_remove_link" value="Remove" actionListener="#{administratorManager.removeUser}">
-                        <f:param name="deleteUserId" id="deleteUserId" value="#{user.username}" />
+                        <f:param name="deleteUserId" id="deleteUserId" value="#{user.userName}" />
                     </h:commandLink>
                 </h:form> 
             </h:column>
