--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -13,7 +13,7 @@
         <h:panelGrid id="panel" columns="3" border="0" cellpadding="0" cellspacing="2">
             <h:commandButton value="Aministrator Pannel" action="administrator_panel?faces-redirect=true" /> 
             <h:commandButton value="Responsable Pannel" action="_" />
-            <h:commandButton value="User Pannel" action="_" />
+            <h:commandButton value="Attendant Pannel" action="_" />
         </h:panelGrid>
 
     </h:form>
