--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -11,9 +11,9 @@
     <hr></hr>
     <h:form>
         <h:panelGrid id="panel" columns="3" border="0" cellpadding="0" cellspacing="2">
-            <h:commandButton value="Aministrator Pannel" action="administrator_panel?faces-redirect=true" /> 
-            <h:commandButton value="Responsable Pannel" action="_" />
-            <h:commandButton value="User Pannel" action="_" />
+            <h:commandButton value="Aministrator Panel" action="administrator_panel?faces-redirect=true" /> 
+            <h:commandButton value="Manager Panel" />
+            <h:commandButton value="Attendant Panel" action="attendant_panel?faces-redirect=true" />
         </h:panelGrid>
 
     </h:form>
