--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -12,8 +12,8 @@
     <h:form>
         <h:panelGrid id="panel" columns="3" border="0" cellpadding="0" cellspacing="2">
             <h:commandButton value="Aministrator Pannel" action="administrator_panel?faces-redirect=true" /> 
-            <h:commandButton value="Responsable Pannel" action="_" />
-            <h:commandButton value="Attendant Pannel" action="_" />
+            <h:commandButton value="Manager Pannel" action="_" />
+            <h:commandButton value="Attendant Pannel" action="attendant_panel?faces-redirect=true" />
         </h:panelGrid>
 
     </h:form>
