estado antes do fetch

--- a/web/administrator/administrator_panel.xhtml
+++ b/web/administrator/administrator_panel.xhtml
@@ -26,7 +26,7 @@
     </h:form>
         <hr></hr>
         <h:form>
-            <h:commandButton value="Back" action="../index?faces_redirect=true" />	
+            <h:commandButton value="Back" action="../index.xhtml" />	
         </h:form>
 
     </h:body>
