--- a/web/administrator_panel.xhtml
+++ b/web/administrator_panel.xhtml
@@ -18,15 +18,15 @@
         <!-- Users list -->
          <h:form>
         <h:panelGrid id="panel" columns="3" border="0" cellpadding="0" cellspacing="2">
-            <h:commandButton value="Aministrators List" action="administrator/administrator_lists?faces-redirect=true" /> 
+            <h:commandButton value="Aministrators List" action="administrator_lists?faces-redirect=true" /> 
             <h:commandButton value="Managers List" action="manager_lists?faces-redirect=true" />
-            <h:commandButton value="Attendants List" action="_" />
+            <h:commandButton value="Attendants List" action="attendant_lists?faces-redirect=true" />
         </h:panelGrid>
 
     </h:form>
         <hr></hr>
         <h:form>
-            <h:commandButton value="Back" action="../index.xhtml" />	
+            <h:commandButton value="Back" action="index.xhtml" />	
         </h:form>
 
     </h:body>
