correcao do texto do botao

--- a/web/administrator_panel.xhtml
+++ b/web/administrator_panel.xhtml
@@ -30,7 +30,7 @@
         <!-- Users list -->
          <h:form>
         <h:panelGrid id="panel" columns="3" border="0" cellpadding="0" cellspacing="2">
-            <h:commandButton value="Aministrators List" action="event_lists?faces-redirect=true" /> 
+            <h:commandButton value="All Events List" action="event_lists?faces-redirect=true" /> 
            
         </h:panelGrid>
 
