--- a/web/event_lists.xhtml
+++ b/web/event_lists.xhtml
@@ -4,44 +4,52 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head>
-        <title>Attendants List</title>
+        <title>Events List</title>
     </h:head>
     <h:body>
-        <p> <h2 style="color: greenyellow">Attendants List</h2> </p>
+        <p> <h2 style="color: greenyellow">Events List</h2> </p>
         
         <hr></hr>
         <!-- Users list -->
         <hr></hr>
         <h:dataTable
-            var="user" 
+            var="event" 
             summary="Table of users"
-            value="#{attendantManager.allAttendants}"
+            value="#{eventManager.allEvents}"
             rules="all"
             cellpadding="10">
-            <h:column>
-                <f:facet name="header">
-                    <h:outputText value="Username" />
-                </f:facet>
-                <h:form>
-                    <h:outputText value="#{user.userName}" />
-                </h:form>
-            </h:column>
-
             <h:column>
                 <f:facet name="header">
                     <h:outputText value="Name" />
                 </f:facet>
                 <h:form>
-                    <h:outputText value="#{user.name}" />
+                    <h:outputText value="#{event.name}" />
                 </h:form>
             </h:column>
 
             <h:column>
                 <f:facet name="header">
-                    <h:outputText value="Email" />
+                    <h:outputText value="Description" />
                 </f:facet>
                 <h:form>
-                    <h:outputText value="#{user.email}" />
+                    <h:outputText value="#{event.description}" />
+                </h:form>
+            </h:column>
+
+            <h:column>
+                <f:facet name="header">
+                    <h:outputText value="Start Date" />
+                </f:facet>
+                <h:form>
+                    <h:outputText value="#{event.startDate}" />
+                </h:form>
+            </h:column>
+            <h:column>
+                <f:facet name="header">
+                    <h:outputText value="Finish Date" />
+                </f:facet>
+                <h:form>
+                    <h:outputText value="#{event.finishDate}" />
                 </h:form>
             </h:column>
 
