-> botao criar event a funcionar e a criar

--- a/web/administrator_panel.xhtml
+++ b/web/administrator_panel.xhtml
@@ -33,6 +33,10 @@
             <h:commandButton value="All Events List" action="event_lists?faces-redirect=true" /> 
            
         </h:panelGrid>
+                <h:panelGrid id="createEvent" columns="3" border="0" cellpadding="0" cellspacing="2">
+            <h:commandButton value="New Event" action="event_create?faces-redirect=true" /> 
+           
+        </h:panelGrid>
          </h:form>
         <hr></hr>
         <p> <h2 style="color: greenyellow">Categorys</h2> </p>
