--- a/web/administrator_panel.xhtml
+++ b/web/administrator_panel.xhtml
@@ -1,8 +1,7 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:h="http://xmlns.jcp.org/jsf/html">
     <h:head>
         <title>Administrator Panel</title>
     </h:head>
@@ -22,6 +21,12 @@
             <h:commandButton value="Managers List" action="manager_lists?faces-redirect=true" />
             <h:commandButton value="Attendants List" action="attendant_lists?faces-redirect=true" />
         </h:panelGrid>
+             <p></p>
+        <h:panelGrid id="panel_create" columns="3" border="0" cellpadding="0" cellspacing="2">
+            <h:commandButton value="Create Aministrator" action="administrator_create?faces-redirect=true" /> 
+            <h:commandButton value="Create Manager" action="manager_create?faces-redirect=true" />
+            <h:commandButton value="Create Attendant" action="attendant_create?faces-redirect=true" />
+        </h:panelGrid>
             <hr></hr> 
          </h:form>
         <p> <h2 style="color: greenyellow">Events</h2> </p>
@@ -29,7 +34,7 @@
         <hr></hr>
         <!-- Users list -->
          <h:form>
-        <h:panelGrid id="panel" columns="3" border="0" cellpadding="0" cellspacing="2">
+        <h:panelGrid id="panel_event" columns="3" border="0" cellpadding="0" cellspacing="2">
             <h:commandButton value="All Events List" action="event_lists?faces-redirect=true" /> 
            
         </h:panelGrid>
