--- a/web/attendant_panel.xhtml
+++ b/web/attendant_panel.xhtml
@@ -14,7 +14,7 @@
         <h:dataTable
             var="attendant" 
             summary="Table of attendants"
-            value="#{attendantManager.allAttendats}"
+            value="#{attendantManager.allAttendants}"
             rules="all"
             cellpadding="10">
             <h:column>
