Event Manager para Session

--- a/web/manager_details.xhtml
+++ b/web/manager_details.xhtml
@@ -63,7 +63,7 @@
                     <f:facet name="header">
                         <h:outputText value="State" />
                     </f:facet>
-                    <h:outputText value="#{event.openForEnrollment}" />
+                    <h:outputText value="#{event.openForEnroll}" />
                 </h:column>
             
                 <h:column>
