--- a/web/manager_panel.xhtml
+++ b/web/manager_panel.xhtml
@@ -51,7 +51,7 @@
                     <h:outputText value="Details" />
                 </f:facet>
                 <h:form>
-                    <h:commandLink id="detais" action="manager_details?faces_redirect=true">
+                    <h:commandLink id="detais" action="manager_details?faces-redirect=true">
                         <h:outputText value="details" />
                         <f:setPropertyActionListener target="#{managerManager.currentManager}" value="#{user}" />
                     </h:commandLink>  
